welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: ')' expected but 'return' found.
	return false;
        ^